@@ -23,6 +23,8 @@ import static org.apache.hadoop.yarn.util.StringHelper.join;
 import java.util.Locale;
 
 import org.apache.commons.lang.StringUtils;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.mapreduce.v2.api.records.JobId;
 import org.apache.hadoop.mapreduce.v2.api.records.TaskId;
@@ -35,6 +37,7 @@ import org.apache.hadoop.yarn.webapp.Controller;
 import com.google.inject.Inject;
 
 public class AppController extends Controller implements AMParams {
+  private static final Log LOG = LogFactory.getLog(AppController.class);
   final App app;
   
   protected AppController(App app, Configuration conf, RequestContext ctx,
