@@ -1,9 +1,0 @@
-package org.apache.hadoop.mapreduce.v2.hs.webapp;
-
-interface HSParams {
-  static final String HS_WEB = "hs.web";
-  static final String APP_ID = "app.id";
-  static final String JOB_ID = "job.id";
-  static final String TASK_ID = "task.id";
-  static final String TASK_TYPE = "task.type";
-}
