@@ -1,27 +1,30 @@
+/**
+* Licensed to the Apache Software Foundation (ASF) under one
+* or more contributor license agreements.  See the NOTICE file
+* distributed with this work for additional information
+* regarding copyright ownership.  The ASF licenses this file
+* to you under the Apache License, Version 2.0 (the
+* "License"); you may not use this file except in compliance
+* with the License.  You may obtain a copy of the License at
+*
+*     http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*/
+
 package org.apache.hadoop.mapreduce.v2.hs.webapp;
 
-import java.util.Locale;
-
 import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.mapreduce.v2.api.records.JobId;
-import org.apache.hadoop.mapreduce.v2.api.records.TaskId;
-import org.apache.hadoop.mapreduce.v2.app.AppContext;
-import org.apache.hadoop.mapreduce.v2.app.job.Job;
-import org.apache.hadoop.mapreduce.v2.app.job.Task;
 import org.apache.hadoop.mapreduce.v2.app.webapp.App;
 import org.apache.hadoop.mapreduce.v2.app.webapp.AppController;
-import org.apache.hadoop.mapreduce.v2.app.webapp.CountersPage;
-import org.apache.hadoop.mapreduce.v2.app.webapp.JobPage;
-import org.apache.hadoop.mapreduce.v2.app.webapp.TasksPage;
-import org.apache.hadoop.mapreduce.v2.hs.HistoryContext;
-import org.apache.commons.lang.StringUtils;
-import org.apache.hadoop.yarn.webapp.Controller;
-import org.apache.hadoop.mapreduce.v2.util.MRApps;
 
-import static org.apache.hadoop.yarn.util.StringHelper.join;
 import com.google.inject.Inject;
 
-public class HsController extends AppController implements HSParams {
+public class HsController extends AppController {
   
   @Inject HsController(App app, Configuration conf, RequestContext ctx) {
     super(app, conf, ctx, "History");
@@ -33,6 +36,8 @@ public class HsController extends AppController implements HSParams {
     setTitle("JobHistory");
   }
 
+  // Need all of these methods here also as Guice doesn't look into parent
+  // classes.
   public void job() {
     super.job();
   }
@@ -49,4 +54,8 @@ public class HsController extends AppController implements HSParams {
     super.task();
   }
 
+  @Override
+  public void attempts() {
+    super.attempts();
+  }
 }
